About us visibility set to gone.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -277,6 +277,7 @@
                         android:id="@+id/vVersion"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
+                        android:visibility="gone"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
                         android:background="@color/grey_text_background"
@@ -288,6 +289,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/metropolis_regular"
                         android:padding="15dp"
+                        android:visibility="gone"
                         android:drawablePadding="20dp"
                         android:paddingStart="20dp"
                         android:gravity="center_vertical"
