--- a/app/src/main/res/values/title_cpp.xml
+++ b/app/src/main/res/values/title_cpp.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="cpp_title">
-        <item name="android:fontFamily">@font/metropolis_regular</item>
+        <item name="android:fontFamily">@font/vlaanderen_roundnf</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">#007DF9</item>
     </style>
