Progress bar added for webview.

--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -7,9 +7,22 @@
     android:background="@color/white"
     tools:context=".WebActivity">
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/pbWebPageProgress"
+        app:layout_constraintTop_toTopOf="parent"
+        app:trackCornerRadius="2dp"
+        android:indeterminate="true"
+        app:indicatorColor="@color/primaryColor"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
     <WebView
         android:id="@+id/wbMyWebView"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
