--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -39,30 +39,13 @@
         android:text=""
         app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/bDeleteAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/alert_background"
-        android:fontFamily="@font/metropolis_regular"
-        android:minHeight="40dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="Delete Account"
-        android:textAllCaps="false"
-        android:textColor="@color/pure_red"
-        android:textSize="16sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDeleteMessage" />
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bReport"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="20dp"
+        android:layout_margin="20dp"
         android:background="@drawable/button_background"
         android:fontFamily="@font/metropolis_regular"
         android:minHeight="40dp"
@@ -71,7 +54,37 @@
         android:textColor="@color/primaryColor"
         android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDeleteMessage" />
+        app:layout_constraintTop_toBottomOf="@+id/bFeedback" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/tvDeleteMessage"
+        android:text="Feedback"
+        android:id="@+id/bFeedback"
+        android:minHeight="40dp"
+        android:textSize="16sp"
+        android:layout_margin="20dp"
+        android:textColor="@color/primaryColor"
+        android:textAllCaps="false"
+        android:fontFamily="@font/metropolis_regular"
+        android:background="@drawable/button_background"
+        android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/bDeleteAccount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/alert_background"
+        android:fontFamily="@font/metropolis_regular"
+        android:minHeight="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="40dp"
+        android:text="Delete Account"
+        android:textAllCaps="false"
+        android:textColor="@color/pure_red"
+        android:textSize="16sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bReport" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
