Not much changed.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -85,11 +85,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
+                    android:textColor="@color/chapter_title"
                     android:layout_marginBottom="20dp"
-                    android:fontFamily="@font/metropolis_regular"
+                    android:fontFamily="@font/metropolis_light_italic"
                     android:hint="Email"
                     android:textSize="16sp"
-                    android:textStyle="italic"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/cvProfilePicture"
                     app:layout_constraintRight_toRightOf="parent"
