--- a/app/src/main/res/drawable/message_background.xml
+++ b/app/src/main/res/drawable/message_background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="#eeeef0"/>
+        android:color="@color/white"/>
     <stroke
-        android:color="#6e6f6e"
+        android:color="@color/chapter_title"
         android:width="1.5dp"/>
     <corners
         android:radius="5dp"/>
