--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -30,13 +30,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:textColor="@color/chapter_title"
         android:lineSpacingExtra="2dp"
         android:justificationMode="inter_word"
+        android:padding="20dp"
+        android:background="@drawable/message_background"
         android:fontFamily="@font/metropolis_regular"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
-        android:text=""
+        android:text="Dummy text here"
         app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount" />
 
 
@@ -62,7 +65,9 @@
         android:id="@+id/bFeedback"
         android:minHeight="40dp"
         android:textSize="16sp"
-        android:layout_margin="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:textColor="@color/primaryColor"
         android:textAllCaps="false"
         android:fontFamily="@font/metropolis_regular"
