Dark logo added for dark mode.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" >@color/primaryColor</item>
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">
-            @drawable/splash_image
+            @drawable/splash_image_dark
         </item>
     </style>
 </resources>
