--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,32 +8,13 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/ablHomeScreenAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tbHomeToolBar"
-            app:title="C++"
-            android:gravity="center_vertical"
-            app:titleTextAppearance="@style/cpp_title"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:menu="@menu/home_activity_appbar"
-            android:background="@color/white"/>
-    </com.google.android.material.appbar.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/flFragmentContainer"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bnvHomeFragmentNavigator"
-        app:layout_constraintTop_toBottomOf="@+id/ablHomeScreenAppBar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnvHomeFragmentNavigator"
