--- a/app/src/main/res/layout/fragment_chapters.xml
+++ b/app/src/main/res/layout/fragment_chapters.xml
@@ -10,7 +10,10 @@
     <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:paddingEnd="10dp"
         android:background="@color/white"
+        app:searchIcon="@drawable/ic_search"
+        app:closeIcon="@drawable/ic_close_24"
         app:queryHint="Search by title"
         app:iconifiedByDefault="false"
         android:id="@+id/svChapters"
