--- a/app/src/main/res/layout/fragment_examples.xml
+++ b/app/src/main/res/layout/fragment_examples.xml
@@ -6,22 +6,17 @@
     android:background="#f2f6f7"
     android:layout_height="match_parent"
     tools:context=".ExamplesFragment">
-    <com.google.android.material.appbar.AppBarLayout
+    <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
-        android:id="@+id/ablExamples"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:background="@color/white"
-            app:title="Examples Index"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            app:titleTextAppearance="@style/title_default"
-            android:id="@+id/tbExamples"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="60dp"
+        android:paddingEnd="10dp"
+        android:background="@color/white"
+        app:searchIcon="@drawable/ic_search"
+        app:closeIcon="@drawable/ic_close_24"
+        app:queryHint="Search by title"
+        app:iconifiedByDefault="false"
+        android:id="@+id/svExamples"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 
@@ -29,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/pbExamplesProgress"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/svExamples"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +36,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvExamples"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/ablExamples"
+        app:layout_constraintTop_toBottomOf="@id/svExamples"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="0dp"/>
 
