--- a/app/src/main/res/drawable/white_background.xml
+++ b/app/src/main/res/drawable/white_background.xml
@@ -2,7 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="#ffffff"/>
-    <corners
-        android:radius="10dp"/>
+        android:color="@color/white"/>
 </shape>
