--- a/app/src/main/res/layout/fragment_chapters.xml
+++ b/app/src/main/res/layout/fragment_chapters.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:paddingEnd="10dp"
+        android:elevation="4dp"
+        app:queryBackground="@drawable/white_background"
         android:background="@color/white"
         app:searchIcon="@drawable/ic_search"
         app:closeIcon="@drawable/ic_close_24"
@@ -35,6 +37,7 @@
         android:id="@+id/rvChapters"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/svChapters"/>
 
