--- a/app/src/main/res/layout/fragment_examples.xml
+++ b/app/src/main/res/layout/fragment_examples.xml
@@ -9,8 +9,10 @@
     <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:elevation="4dp"
         android:paddingEnd="10dp"
         android:background="@color/white"
+        app:queryBackground="@color/white"
         app:searchIcon="@drawable/ic_search"
         app:closeIcon="@drawable/ic_close_24"
         app:queryHint="Search by title"
@@ -36,6 +38,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvExamples"
         android:layout_width="match_parent"
+        android:layout_marginTop="2dp"
         app:layout_constraintTop_toBottomOf="@id/svExamples"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="0dp"/>
