--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -6,24 +6,19 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".WebActivity">
-
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/pbWebPageProgress"
-        app:layout_constraintTop_toTopOf="parent"
-        app:trackCornerRadius="2dp"
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
         android:indeterminate="true"
         app:indicatorColor="@color/primaryColor"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        android:id="@+id/lpiWebPageProgress"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <WebView
         android:id="@+id/wbMyWebView"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lpiWebPageProgress"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
