--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -90,6 +90,18 @@
         android:textSize="16sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bReport" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="25dp"
+        android:fontFamily="@font/metropolis_regular"
+        android:textColor="@color/chapter_text"
+        android:lineSpacingExtra="5dp"
+        android:textColorLink="@color/primaryColor"
+        android:id="@+id/tvContactUs"
+        android:text="Having trouble in managing account?\nContact Us."
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
