--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -1,107 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     android:background="#f2f6f7"
     tools:context=".DeleteAccountActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/ablDeleteAccount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tbDeleteAccount"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/ablDeleteAccount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:navigationIcon="@drawable/ic_back"
-            app:title="Delete Account"
-            app:titleTextAppearance="@style/title_default" />
-    </com.google.android.material.appbar.AppBarLayout>
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/tbDeleteAccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                app:navigationIcon="@drawable/ic_back"
+                app:title="Delete Account"
+                app:titleTextAppearance="@style/title_default" />
+        </com.google.android.material.appbar.AppBarLayout>
 
 
-    <TextView
-        android:id="@+id/tvDeleteMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/chapter_title"
-        android:lineSpacingExtra="2dp"
-        android:justificationMode="inter_word"
-        android:padding="20dp"
-        android:background="@drawable/message_background"
-        android:fontFamily="@font/metropolis_regular"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
-        android:text="Dummy text here"
-        app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount" />
+        <TextView
+            android:id="@+id/tvDeleteMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/chapter_title"
+            android:lineSpacingExtra="2dp"
+            android:justificationMode="inter_word"
+            android:padding="20dp"
+            android:background="@drawable/message_background"
+            android:fontFamily="@font/metropolis_regular"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:text="Dummy text here"
+            app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount" />
 
 
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/bReport"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:background="@drawable/button_background"
-        android:fontFamily="@font/metropolis_regular"
-        android:minHeight="40dp"
-        android:text="Report"
-        android:textAllCaps="false"
-        android:textColor="@color/primaryColor"
-        android:textSize="16sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bFeedback" />
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/tvDeleteMessage"
-        android:text="Feedback"
-        android:id="@+id/bFeedback"
-        android:minHeight="40dp"
-        android:textSize="16sp"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textColor="@color/primaryColor"
-        android:textAllCaps="false"
-        android:fontFamily="@font/metropolis_regular"
-        android:background="@drawable/button_background"
-        android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bReport"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/button_background"
+            android:fontFamily="@font/metropolis_regular"
+            android:minHeight="40dp"
+            android:text="Report"
+            android:textAllCaps="false"
+            android:textColor="@color/primaryColor"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bFeedback" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/tvDeleteMessage"
+            android:text="Feedback"
+            android:id="@+id/bFeedback"
+            android:minHeight="40dp"
+            android:textSize="16sp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:textColor="@color/primaryColor"
+            android:textAllCaps="false"
+            android:fontFamily="@font/metropolis_regular"
+            android:background="@drawable/button_background"
+            android:layout_height="wrap_content"/>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/bDeleteAccount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/alert_background"
-        android:fontFamily="@font/metropolis_regular"
-        android:minHeight="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
-        android:text="Delete Account"
-        android:textAllCaps="false"
-        android:textColor="@color/pure_red"
-        android:textSize="16sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bReport" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_margin="25dp"
-        android:fontFamily="@font/metropolis_regular"
-        android:textColor="@color/chapter_text"
-        android:lineSpacingExtra="5dp"
-        android:textColorLink="@color/primaryColor"
-        android:id="@+id/tvContactUs"
-        android:text="Having trouble in managing account?\nContact Us."
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bDeleteAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/alert_background"
+            android:fontFamily="@font/metropolis_regular"
+            android:minHeight="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="40dp"
+            android:text="Delete Account"
+            android:textAllCaps="false"
+            android:textColor="@color/pure_red"
+            android:textSize="16sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bReport" />
+
+        <TextView
+            android:id="@+id/tvContactUs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="25dp"
+            android:fontFamily="@font/metropolis_regular"
+            android:gravity="center"
+            android:lineSpacingExtra="5dp"
+            android:text="Having trouble in managing account? Contact Us."
+            android:textColor="@color/chapter_text"
+            android:textColorLink="@color/primaryColor"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bDeleteAccount"
+            app:layout_constraintVertical_bias="1"
+            tools:layout_editor_absoluteX="25dp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</ScrollView>
