--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -37,8 +37,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
-                android:justificationMode="inter_word"
-                android:layout_marginTop="35dp"
                 android:fontFamily="@font/metropolis_regular"
                 android:hint="Chapter Text is loading."
                 android:lineSpacingExtra="12dp"
@@ -46,44 +44,34 @@
                 android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
-            <LinearLayout
-                android:id="@+id/llCodeContainer"
+            <View
+                android:id="@+id/vSeparator"
+                app:layout_constraintTop_toBottomOf="@+id/tvChapterText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:background="@drawable/white_corner_background"
-                app:layout_constraintTop_toBottomOf="@id/tvChapterText">
+                android:background="#2d3e50"
+                android:layout_height="1dp"/>
 
-                <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fillViewport="true"
-                    android:padding="10dp"
-                    android:scrollbars="none">
-                    <TextView
-                        android:id="@+id/tvCode"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/consolas"
-                        android:justificationMode="inter_word"
-                        android:scrollHorizontally="true"
-                        android:textSize="20sp" />
-                </HorizontalScrollView>
-
-            </LinearLayout>
             <TextView
-                android:id="@+id/tvExplanation"
+                android:id="@+id/tvContribute"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:justificationMode="inter_word"
+                android:layout_margin="25dp"
+                android:hint="Contribute"
+                android:textColorLink="@color/primaryColor"
                 android:fontFamily="@font/metropolis_regular"
                 android:lineSpacingExtra="12dp"
                 android:textColor="@color/grey_text"
                 android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/llCodeContainer"/>
+                app:layout_constraintTop_toBottomOf="@id/vSeparator"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#2d3e50"
+                android:layout_margin="25dp"
+                app:layout_constraintTop_toBottomOf="@id/tvContribute"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
