--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -73,7 +73,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tvExplanation"
+                android:id="@+id/tvContribute"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
