--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -7,83 +7,95 @@
     android:background="#f2f6f7"
     tools:context=".ExampleActivity">
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/pbLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:indicatorColor="@color/primaryColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:trackCornerRadius="2dp" />
+
     <ScrollView
         android:id="@+id/svContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@id/cvBottomItems"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@id/clBottomItems"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:paddingBottom="20dp"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tvTitle"
+            <WebView
+                android:id="@+id/wbExampleText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
-                android:fontFamily="@font/metropolis_semi_bold"
-                android:hint="Example Title"
-                android:textColor="#2d3e50"
-                android:textSize="32sp"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tvExampleText"
+            <View
+                android:id="@+id/vSeparator"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="25dp"
-                android:justificationMode="inter_word"
-                android:fontFamily="@font/metropolis_regular"
-                android:lineSpacingExtra="12dp"
-                android:hint="Example text is loading."
-                android:textColor="@color/grey_text"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
-
-            <LinearLayout
-                android:id="@+id/llCodeContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="25dp"
-                android:background="@drawable/white_corner_background"
-                app:layout_constraintTop_toBottomOf="@id/tvExampleText">
-
-                <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fillViewport="true"
-                    android:padding="10dp"
-                    android:scrollbars="none">
-
-                    <TextView
-                        android:id="@+id/tvCode"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/consolas"
-                        android:hint="Chapter Code"
-                        android:scrollHorizontally="true"
-                        android:textSize="20sp" />
-                </HorizontalScrollView>
-
-            </LinearLayout>
+                android:layout_height="1dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:background="#2d3e50"
+                app:layout_constraintTop_toBottomOf="@+id/wbExampleText" />
 
             <TextView
                 android:id="@+id/tvContribute"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
-                android:justificationMode="inter_word"
+                android:layout_margin="20dp"
                 android:fontFamily="@font/metropolis_regular"
+                android:hint="Contribute"
                 android:lineSpacingExtra="12dp"
-                android:textColor="@color/grey_text"
+                android:textColor="@color/chapter_title"
+                android:textColorLink="@color/primaryColor"
                 android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/llCodeContainer"/>
+                app:layout_constraintTop_toBottomOf="@id/vSeparator" />
 
+            <View
+                android:id="@+id/vContribute"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#2d3e50"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/tvContribute" />
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="25dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/vContribute">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/metropolis_semi_bold"
+                    android:text="Brought to you by "
+                    android:textColor="@color/chapter_title"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/sirin_stencil_regular"
+                    android:text="EdPub"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -91,79 +103,100 @@
 
     </ScrollView>
 
+    <ImageView
+        android:id="@+id/ivClose"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_margin="25dp"
+        android:background="@drawable/circle_background"
+        android:elevation="10dp"
+        android:padding="6dp"
+        android:src="@drawable/ic_baseline_close_24"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvBottomItems"
-        android:layout_width="0dp"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clBottomItems"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:cardBackgroundColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/ivShare"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="25dp"
+            android:clickable="true"
+            android:contentDescription="Share"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:padding="18dp"
+            android:src="@drawable/ic_outline_share_24"
+            app:layout_constraintBottom_toBottomOf="parent"
 
-            android:layout_height="match_parent">
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/ivShare"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginLeft="25dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:contentDescription="Share"
-                android:padding="18dp"
-                android:src="@drawable/ic_outline_share_24"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/ivFavourite"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="5dp"
+            android:clickable="true"
+            android:contentDescription="Favourite"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:padding="18dp"
+            android:src="@drawable/ic_baseline_favorite_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/ivShare"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/ivFavourite"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginLeft="25dp"
-                android:clickable="true"
-                android:contentDescription="Favourite"
-                android:padding="18dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_baseline_favorite_24"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/ivShare"
-                app:layout_constraintTop_toTopOf="parent" />
-            <ImageView
-                android:id="@+id/ivDone"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginLeft="25dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:contentDescription="Mark as done"
-                android:padding="18dp"
-                android:src="@drawable/ic_baseline_check_24"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/ivFavourite"
-                app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/ivDone"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="5dp"
+            android:clickable="true"
+            android:contentDescription="Mark as done"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:padding="18dp"
+            android:src="@drawable/ic_baseline_check_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/ivFavourite"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/bToNextExample"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/button_background"
-                android:fontFamily="@font/metropolis_regular"
-                android:text="Next"
-                android:textAllCaps="false"
-                android:textColor="@color/primaryColor"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/ivToNextExample"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="30dp"
+            android:clickable="true"
+            android:contentDescription="Mark as done"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:padding="18dp"
+            android:src="@drawable/ic_baseline_navigate_next_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivToPreviousExample"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
+            android:clickable="true"
+            android:contentDescription="Mark as done"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:padding="18dp"
+            android:src="@drawable/ic_baseline_navigate_before_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/ivToNextExample"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
